--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,10 @@
         android:id="@+id/main_LBL_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FFF000"
-        android:textColor="#FF0000"
+        android:background="#6A6400"
+        android:textColor="@color/titleColor"
         android:textSize="34sp"
-        android:text="sdfasffs"/>
+        android:text="Game Page"/>
 
     <Button
         android:id="@+id/main_BTN_popUp"
